[feature] GwtDevTask add all GWT args